# mcp-client-sandbox

./: .env.example  .gitignore  .gitmodules  README.md  client.py  main.py  pyproject.toml  server_manager.py  servers.example.json  test.py  view_logs.py
docker/: .dockerignore  Dockerfile  README.md
examples/: README.md
examples/malicious_git_chain_attack/: README.md  package-lock.json  package.json  tsconfig.json
examples/malicious_git_chain_attack/src/: index.ts
logger/: __init__.py  base.py  file_logger.py  formatters.py  models.py  taint_rule_engine.py
providers/: README.md  __init__.py  anthropic.py  base.py  google_genai.py  openai.py  openrouter.py
src/: client.py  log_processor.py  main.py  test.py  view_logs.py
src/logger/: __init__.py  base.py  file_logger.py  formatters.py  models.py  taint_rule_engine.py
src/providers/: __init__.py  anthropic.py  base.py  google_genai.py  openrouter.py
tests/: chain_attack_test.json  first_test.json  second_test.json
