[project]
name = "mcp-client-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.69.0",
    "google-genai>=1.43.0",
    "mcp>=1.17.0",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
